--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <div class="container">
   <div class="card-text">
-    <img class="card-img" src="./images/image-qr-code.png" alt="QR">
+    <img class="card-img" src="./images/image-qr-code.png" alt="qr-code">
     <br>
     <p1> Improve your front-end skills<br> by building projects</p1>
     <br>
